Aligning "Show All" to the right to prevent clicks
Changing "Show All" categories button to the right to prevent miss clicks when clicking at "Filter Categories"

--- a/mobile/mobile.css
+++ b/mobile/mobile.css
@@ -104,6 +104,10 @@
   flex-grow: 1 !important;
 }
 
+#vvp-browse-nodes-container > p {
+  text-align: right;
+}
+
 #vvp-items-button-container .a-button-toggle.a-button{
     margin: 0px !important;
     padding: 0px !important;
